Update 'backend-tests-go-eubrowck' component image to: quay.io/rhtap_qe/backend-tests-go-eubrowck:bad4bda4a751f3fccbc101aab47406390e3cc805@sha256:b8c994b019432f48834cf528a6bbe3cade04a39694ad596e56f8dd399b59aa70

--- a/components/backend-tests-go-eubrowck/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-eubrowck/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-eubrowck
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-eubrowck:bad4bda4a751f3fccbc101aab47406390e3cc805@sha256:b8c994b019432f48834cf528a6bbe3cade04a39694ad596e56f8dd399b59aa70
+          name: container-image
